# RumBar-Warenwirtschaft

./: .gitignore  app.py  data_processor.py  helpers.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
attached_assets/: Warenwirtschaft Rumbar 2024 - Lagerbestand.csv  Warenwirtschaft Rumbar 2024 - Rezepte.csv  report-day-2025-03-28-117674.csv
