[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "rumbar-warenwirtschaft"
version = "0.1.0"
description = "Add your description here"
description = "Warenwirtschaft für RumBar Falkensee"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "streamlit>=1.44.0",
]
[tool.setuptools]
packages = ["app"]
